--- a/frontend/src/components/HomeStyles.css
+++ b/frontend/src/components/HomeStyles.css
@@ -5,5 +5,36 @@
 .bg {
   height: 80vh;
   background-image: url('../images/background.png');
+}
 
+.input-wrapper {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  width: 40%;
+  border-radius: 10px;
+  height: 3.5rem;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #ddd;
+  display: flex;
+  align-items: center;
+}
+
+input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  font-size: 1.5rem;
+  width: 100%;
+  margin-left: 10px;
+}
+
+input:focus {
+  outline: none;
+}
+
+#search-icon:hover {
+  cursor: pointer;
 }
