--- a/frontend/src/components/HomeStyles.css
+++ b/frontend/src/components/HomeStyles.css
@@ -8,10 +8,6 @@
 }
 
 .input-wrapper {
-  position: absolute;
-  top: 22rem;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: white;
   width: 40%;
   border-radius: 10px;
@@ -20,6 +16,12 @@
   box-shadow: 0px 0px 8px #ddd;
   display: flex;
   align-items: center;
+}
+
+.bg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 input {
